--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 	],
 	"repository": "fregante/webext-patterns",
 	"license": "MIT",
-	"author": "Federico Brigante <opensource@bfred.it> (bfred.it)",
+	"author": "Federico Brigante <me@fregante.com> (https://fregante.com)",
 	"type": "module",
 	"main": "index.js",
 	"module": "index.js",
@@ -35,29 +35,20 @@
 		],
 		"rules": {
 			"unicorn/better-regex": "off",
-			"unicorn/no-fn-reference-in-iterator": "off",
-			"unicorn/import-index": "off",
-			"import/extensions": "off",
-			"import/no-useless-path-segments": "off",
+			"unicorn/no-array-callback-reference": "off",
 			"comma-dangle": [
 				"error",
 				"always-multiline"
 			]
 		}
 	},
-	"ava": {
-		"nodeArguments": [
-			"--experimental-modules"
-		]
-	},
 	"devDependencies": {
-		"@sindresorhus/tsconfig": "^0.7.0",
-		"@types/chrome": "0.0.106",
-		"ava": "^3.8.1",
-		"sinon": "^9.0.2",
-		"ts-node": "^8.10.1",
-		"type-fest": "^0.13.1",
-		"typescript": "^3.8.3",
-		"xo": "^0.30.0"
+		"@sindresorhus/tsconfig": "^0.8.0",
+		"@types/chrome": "0.0.128",
+		"ava": "^3.15.0",
+		"sinon": "^9.2.4",
+		"type-fest": "^0.20.2",
+		"typescript": "^4.1.3",
+		"xo": "^0.37.1"
 	}
 }
