--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
 	"extends": "@sindresorhus/tsconfig",
 	"compilerOptions": {
 		"target": "es2018",
-		"module": "es2015"
+		"module": "es2015",
+		"noUncheckedIndexedAccess": false
 	},
 	"files": [
 		"index.ts"
