--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
 		"type-fest": "^1.2.2",
 		"typescript": "^4.3.5",
 		"xo": "^0.42.0"
+	},
+	"dependencies": {
+		"escape-string-regexp": "^5.0.0"
 	}
 }
