--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "webext-patterns",
 	"version": "1.1.1",
-	"description": "Tool to convert the patterns of your WebExtension manifest to regex",
+	"description": "Tool to convert the patterns and globs of your WebExtension manifest to regex",
 	"keywords": [
 		"browser",
 		"chrome",
@@ -9,6 +9,10 @@
 		"firefox",
 		"glob",
 		"permission",
+		"greasemonkey",
+		"user scripts",
+		"globs",
+		"userscript",
 		"match",
 		"webext"
 	],
