--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "webext-patterns",
 	"version": "1.1.1",
-	"description": "Tool to convert the patterns of your WebExtension manifest to regex",
+	"description": "Tool to convert the patterns and globs of your WebExtension manifest to regex",
 	"keywords": [
 		"browser",
 		"chrome",
@@ -9,6 +9,10 @@
 		"firefox",
 		"glob",
 		"permission",
+		"greasemonkey",
+		"user scripts",
+		"globs",
+		"userscript",
 		"match",
 		"webext"
 	],
@@ -26,7 +30,9 @@
 		"build": "tsc",
 		"prepare": "tsc --sourceMap false",
 		"test": "tsc && ava && xo",
-		"watch": "tsc --watch"
+		"watch": "tsc --watch",
+		"lint": "xo",
+		"fix": "xo --fix"
 	},
 	"xo": {
 		"envs": [
@@ -45,5 +51,14 @@
 		"type-fest": "^2.13.1",
 		"typescript": "^4.7.4",
 		"xo": "^0.50.0"
+	},
+	"webExt": {
+		"sourceDir": "demo-extension",
+		"run": {
+			"startUrl": [
+				"chrome://extensions/",
+				"https://example.com/"
+			]
+		}
 	}
 }
