Escape all regex characters + update Chrome’s `?` handling

--- a/demo-extension/manifest.json
+++ b/demo-extension/manifest.json
@@ -8,7 +8,7 @@
 	"content_scripts": [
 		{
 			"matches": ["*://*/*"],
-			"include_globs":["*.com/404/*"],
+			"include_globs":["*exa????.com*"],
 			"js": ["content.js"]
 		}
 	]
