--- a/demo-extension/manifest.json
+++ b/demo-extension/manifest.json
@@ -8,7 +8,7 @@
 	"content_scripts": [
 		{
 			"matches": ["*://*/*"],
-			"include_globs":["*exa????.com*"],
+			"include_globs": ["*example?.com*"],
 			"js": ["content.js"]
 		}
 	]
