--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "webext-patterns",
 	"version": "1.1.1",
-	"description": "Tool to convert the patterns of your WebExtension manifest to regex",
+	"description": "Tool to convert the patterns and globs of your WebExtension manifest to regex",
 	"keywords": [
 		"browser",
 		"chrome",
@@ -9,6 +9,10 @@
 		"firefox",
 		"glob",
 		"permission",
+		"greasemonkey",
+		"user scripts",
+		"globs",
+		"userscript",
 		"match",
 		"webext"
 	],
@@ -24,6 +28,8 @@
 	],
 	"scripts": {
 		"build": "tsc",
+		"fix": "xo --fix",
+		"lint": "xo",
 		"prepare": "tsc --sourceMap false",
 		"test": "tsc && ava && xo",
 		"watch": "tsc --watch"
@@ -37,6 +43,9 @@
 			"unicorn/better-regex": "off"
 		}
 	},
+	"dependencies": {
+		"escape-string-regexp": "^5.0.0"
+	},
 	"devDependencies": {
 		"@sindresorhus/tsconfig": "^3.0.1",
 		"@types/chrome": "0.0.190",
@@ -45,5 +54,14 @@
 		"type-fest": "^2.13.1",
 		"typescript": "^4.7.4",
 		"xo": "^0.50.0"
+	},
+	"webExt": {
+		"sourceDir": "demo-extension",
+		"run": {
+			"startUrl": [
+				"chrome://extensions/",
+				"https://example.com/"
+			]
+		}
 	}
 }
