--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"webext"
 	],
 	"repository": "fregante/webext-patterns",
+	"funding": "https://github.com/sponsors/fregante",
 	"license": "MIT",
 	"author": "Federico Brigante <me@fregante.com> (https://fregante.com)",
 	"type": "module",
@@ -48,12 +49,12 @@
 	},
 	"devDependencies": {
 		"@sindresorhus/tsconfig": "^3.0.1",
-		"@types/chrome": "0.0.190",
-		"ava": "^4.3.0",
-		"sinon": "^14.0.0",
-		"type-fest": "^2.13.1",
-		"typescript": "^4.7.4",
-		"xo": "^0.50.0"
+		"@types/chrome": "0.0.210",
+		"ava": "^5.1.1",
+		"sinon": "^15.0.1",
+		"type-fest": "^3.5.3",
+		"typescript": "^4.9.4",
+		"xo": "^0.53.1"
 	},
 	"webExt": {
 		"sourceDir": "demo-extension",
