--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
 	"license": "MIT",
 	"author": "Federico Brigante <me@fregante.com> (https://fregante.com)",
 	"type": "module",
-	"main": "index.js",
-	"module": "index.js",
+	"exports": "./index.js",
+	"types": "./index.d.ts",
 	"files": [
 		"index.js",
 		"index.d.ts"
@@ -48,13 +48,16 @@
 		"escape-string-regexp": "^5.0.0"
 	},
 	"devDependencies": {
-		"@sindresorhus/tsconfig": "^3.0.1",
-		"@types/chrome": "0.0.210",
-		"ava": "^5.1.1",
-		"sinon": "^15.0.1",
-		"type-fest": "^3.5.3",
-		"typescript": "^4.9.4",
-		"xo": "^0.53.1"
+		"@sindresorhus/tsconfig": "^5.0.0",
+		"@types/chrome": "0.0.256",
+		"ava": "^6.0.1",
+		"sinon": "^17.0.1",
+		"type-fest": "^4.9.0",
+		"typescript": "^5.3.3",
+		"xo": "^0.56.0"
+	},
+	"engines": {
+		"node": ">=18"
 	},
 	"webExt": {
 		"sourceDir": "demo-extension",
